--- a/src/Hosts/Modulus.Host.Blazor/wwwroot/index.html
+++ b/src/Hosts/Modulus.Host.Blazor/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="Modulus.Host.Blazor.styles.css" />
-    <link rel="icon" href="data:,">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
